[misc] Use jakarta package and small code improvements.